package enums;

public enum Ausrüstung {
    FAHRZEUG,
    WERKZEUGE,
    GENERATOR,
    SANITÄTSKIT
}
