package models;

import interfaces.ILocation;

public class GeoKoordinaten implements ILocation {

}